project/k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: react-app-production
  labels:
    name: react-app-production
    env: production
